fixes font size bug on mobile

--- a/components/services/serviceCard.module.css
+++ b/components/services/serviceCard.module.css
@@ -30,7 +30,7 @@
   color: White;
   backdrop-filter: blur(.25rem) ;
   -webkit-backdrop-filter: blur(.25rem);
-  font-size: 1rem;
+  font-size: 1.5rem;
   font-weight: 800;
   z-index: 1;
   padding: 3px
